# PokeTools

./: .gitignore  Data_manual.md  README.md  manual.md  pyproject.toml
config/: INFO.md  assets.csv  config.json  gamesMap.csv  typesOrder.json
data/derived/: abilities.json  evolution_edges.json  items.json  learnset_entries.json  meta.json  moves.json  natures.json  pokemon_forms.json  type_chart.json
data/export/: README.md  pokedata.xlsx  ~$pokedata.xlsx
dev_manual/: specs.md
dev_manual/prompts/: 1_fetch_prompt.md  2_transform_prompt.md  3_export_prompt.md
development_notes/: README.md  specs.md
development_notes/prompts/: 3_export_prompt.md  4_assets_prompt.md
spec/: assets.spec.md  data-contract.md  export.spec.md  fetch.spec.md  north-star.md  transform.spec.md
src/: export.py  fetch.py  main.py  naming.py  transform.py  transform_evolution.py  transform_learnset.py  transform_reference.py
src/cache/: io.py
tools/: pokedex.xlsm
tools/assets/: colors.csv  info.md
tools/src/: Buttons.bas  CGridComboEvents.cls  CGridHeaderLabel.cls  CGridRowLabel.cls  DexLogic.bas  Export.bas  Functions.bas  GlobalTables.bas  MoveDexLogic.bas  Movelist.frm  Movelist.frx  Pokelist.frm  Pokelist.frx  Pokemoves.frm  Pokemoves.frx  UI.bas  UI_Func.bas  VbaExport.bas  VbaImport.bas
tools/src/_internal/: Abilitydex.cls  DamageCalc.cls  Itemdex.cls  Movedex.cls  Naturedex.cls  Pokedex.cls  README_VBA.md  Settings.cls  Teambuilder.cls  ThisWorkbook.cls  TypeChart.cls
