[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "poketools"
version = "0.1.0"
description = "Pokédex Data Pipeline tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"pokebase>=1.3.0",
	"requests>=2.31.0",
	"openpyxl>=3.1.2"
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
